exclude generated from git

--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
 						<source>src/main/resources/car.xsd</source>
 					</sources>
 					<schemaDirectory>${project.basedir}/src/main/resources/</schemaDirectory>
-					<outputDirectory>${project.basedir}/src/main/java</outputDirectory>
+					<outputDirectory>${project.basedir}/src/main/java/gen</outputDirectory>
 					<clearOutputDir>false</clearOutputDir>
 				</configuration>
 			</plugin>
