--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-/src/main/java/gen
+/src/main/java/com/artemas/mysoapspring/gen
+/src/main/java/META-INF
 
 ### STS ###
 .apt_generated
